--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "server:dev": "node server.js",
+    "server:dev": "nodemon server.js",
     "server:prod": "node server.js",
     "start": "  npm run build && npm run server:prod",
     "start:front": "react-scripts start",
